--- a/css/privacy-policy.css
+++ b/css/privacy-policy.css
@@ -1,7 +1,7 @@
 .version.privacy_policy /* version checker */
 {
-	color: #0000EF;
-	background-color: #D34869;
+	color: #00000C;
+	background-color: #33E8F0;
 }
 
 #muse_css_mq
@@ -40,7 +40,7 @@
 
 #u3237-6
 {
-	z-index: 58;
+	z-index: 52;
 	width: 308px;
 	min-height: 83px;
 	margin-left: 270px;
@@ -57,7 +57,7 @@
 
 #u3111
 {
-	width: 119px;
+	width: 139px;
 	min-height: 34px;
 	position: relative;
 	margin-right: -10000px;
@@ -65,28 +65,28 @@
 
 #u3112
 {
-	width: 119px;
+	width: 139px;
 	padding-bottom: 17px;
 	position: relative;
 }
 
 #u3112:hover
 {
-	width: 119px;
+	width: 139px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3112:active
 {
-	width: 119px;
+	width: 139px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3114-4
 {
-	width: 119px;
+	width: 139px;
 	min-height: 17px;
 	position: relative;
 	margin-right: -10000px;
@@ -98,7 +98,7 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 119px;
+	width: 139px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -107,43 +107,50 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 119px;
+	width: 139px;
 	margin: 0px -10000px 0px 0px;
 }
 
 #u3118
 {
-	width: 119px;
+	width: 139px;
 	min-height: 34px;
 	position: relative;
 	margin-right: -10000px;
-	left: 121px;
+	left: 141px;
 }
 
 #u3119
 {
-	width: 119px;
+	width: 139px;
 	padding-bottom: 17px;
 	position: relative;
 }
 
 #u3112.MuseMenuActive,#u3119:hover
 {
-	width: 119px;
+	width: 139px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3119:active
 {
-	width: 119px;
+	width: 139px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u3119.MuseMenuActive
+{
+	width: 139px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3122-4
 {
-	width: 119px;
+	width: 139px;
 	min-height: 17px;
 	position: relative;
 	margin-right: -10000px;
@@ -155,7 +162,7 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 119px;
+	width: 139px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -164,55 +171,64 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 119px;
+	width: 139px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u3119.MuseMenuActive #u3122-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 139px;
 	margin: 0px -10000px 0px 0px;
 }
 
 #u4801
 {
-	width: 119px;
+	width: 140px;
 	min-height: 34px;
 	position: relative;
 	margin-right: -10000px;
-	left: 242px;
+	left: 282px;
 }
 
 #u4802
 {
-	width: 119px;
+	width: 140px;
 	padding-bottom: 17px;
 	position: relative;
 }
 
-#u3119.MuseMenuActive,#u4802:hover
+#u4802:hover
 {
-	width: 119px;
+	width: 140px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u4802:active
 {
-	width: 119px;
+	width: 140px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u4804-4
 {
-	width: 119px;
+	width: 140px;
 	min-height: 17px;
 	position: relative;
 	margin-right: -10000px;
 	top: 8px;
 }
 
-#u3119.MuseMenuActive #u3122-4,#u4802:hover #u4804-4
+#u4802:hover #u4804-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 119px;
+	width: 140px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -221,50 +237,43 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 119px;
+	width: 140px;
 	margin: 0px -10000px 0px 0px;
 }
 
 #u3155
 {
-	width: 119px;
+	width: 140px;
 	min-height: 34px;
 	position: relative;
 	margin-right: -10000px;
-	left: 363px;
+	left: 424px;
 }
 
 #u3156
 {
-	width: 119px;
+	width: 140px;
 	padding-bottom: 17px;
 	position: relative;
 }
 
 #u4802.MuseMenuActive,#u3156:hover
 {
-	width: 119px;
+	width: 140px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3156:active
 {
-	width: 119px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u3156.MuseMenuActive
-{
-	width: 119px;
+	width: 140px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3158-4
 {
-	width: 119px;
+	width: 140px;
 	min-height: 17px;
 	position: relative;
 	margin-right: -10000px;
@@ -276,7 +285,7 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 119px;
+	width: 140px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -285,121 +294,55 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 119px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u3156.MuseMenuActive #u3158-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 119px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u4991
-{
-	width: 120px;
-	min-height: 34px;
-	position: relative;
-	margin-right: -10000px;
-	left: 484px;
-}
-
-#u4992
-{
-	width: 120px;
-	padding-bottom: 17px;
-	position: relative;
-}
-
-#u4992:hover
-{
-	width: 120px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u4992:active
-{
-	width: 120px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u4995-4
-{
-	width: 120px;
-	min-height: 17px;
-	position: relative;
-	margin-right: -10000px;
-	top: 8px;
-}
-
-#u4992:hover #u4995-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 120px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u4992:active #u4995-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 120px;
+	width: 140px;
 	margin: 0px -10000px 0px 0px;
 }
 
 #u3176
 {
-	width: 120px;
+	width: 140px;
 	min-height: 34px;
 	position: relative;
 	margin-right: -10000px;
-	left: 606px;
+	left: 566px;
 }
 
 #u3177
 {
-	width: 120px;
+	width: 140px;
 	padding-bottom: 17px;
 	position: relative;
 }
 
-#u4992.MuseMenuActive,#u3177:hover
+#u3156.MuseMenuActive,#u3177:hover
 {
-	width: 120px;
+	width: 140px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3177:active
 {
-	width: 120px;
+	width: 140px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3178-4
 {
-	width: 120px;
+	width: 140px;
 	min-height: 17px;
 	position: relative;
 	margin-right: -10000px;
 	top: 8px;
 }
 
-#u4992.MuseMenuActive #u4995-4,#u3177:hover #u3178-4
+#u3156.MuseMenuActive #u3158-4,#u3177:hover #u3178-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 120px;
+	width: 140px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -408,50 +351,50 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 120px;
+	width: 140px;
 	margin: 0px -10000px 0px 0px;
 }
 
 #u3197
 {
-	width: 120px;
+	width: 140px;
 	min-height: 34px;
 	position: relative;
 	margin-right: -10000px;
-	left: 728px;
+	left: 708px;
 }
 
 #u3198
 {
-	width: 120px;
+	width: 140px;
 	padding-bottom: 17px;
 	position: relative;
 }
 
 #u3177.MuseMenuActive,#u3198:hover
 {
-	width: 120px;
+	width: 140px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3198:active
 {
-	width: 120px;
+	width: 140px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3198.MuseMenuActive
 {
-	width: 120px;
+	width: 140px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3200-4
 {
-	width: 120px;
+	width: 140px;
 	min-height: 17px;
 	position: relative;
 	margin-right: -10000px;
@@ -463,7 +406,7 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 120px;
+	width: 140px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -472,7 +415,7 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 120px;
+	width: 140px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -481,7 +424,7 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 120px;
+	width: 140px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -500,7 +443,7 @@
 
 #u1251-4
 {
-	z-index: 108;
+	z-index: 102;
 	width: 216px;
 	min-height: 34px;
 	background-color: transparent;
@@ -517,7 +460,7 @@
 
 #u1252
 {
-	z-index: 112;
+	z-index: 106;
 	width: 782px;
 	height: 16px;
 	border-style: solid;
@@ -532,7 +475,7 @@
 
 #u1250-37
 {
-	z-index: 71;
+	z-index: 65;
 	width: 782px;
 	min-height: 834px;
 	background-color: transparent;
@@ -600,7 +543,7 @@
 
 #u4273-4
 {
-	z-index: 49;
+	z-index: 43;
 	margin-bottom: -8px;
 	position: relative;
 	margin-right: -10000px;
@@ -610,7 +553,7 @@
 
 #u3222-5
 {
-	z-index: 53;
+	z-index: 47;
 	width: 114px;
 	min-height: 19px;
 	position: relative;
@@ -630,7 +573,7 @@
 
 #u3252-6
 {
-	z-index: 64;
+	z-index: 58;
 	width: 782px;
 	min-height: 19px;
 	position: relative;
@@ -650,7 +593,7 @@
 
 #u4305
 {
-	z-index: 70;
+	z-index: 64;
 	width: 33px;
 	min-height: 33px;
 	position: relative;
