--- a/css/contact.css
+++ b/css/contact.css
@@ -1,7 +1,7 @@
 .version.contact /* version checker */
 {
-	color: #000014;
-	background-color: #E17B16;
+	color: #0000FE;
+	background-color: #B93AC5;
 }
 
 #muse_css_mq
@@ -41,7 +41,7 @@
 
 #u3237-6
 {
-	z-index: 58;
+	z-index: 52;
 	width: 308px;
 	min-height: 83px;
 	margin-left: 270px;
@@ -58,7 +58,7 @@
 
 #u3111
 {
-	width: 119px;
+	width: 139px;
 	min-height: 34px;
 	position: relative;
 	margin-right: -10000px;
@@ -66,28 +66,28 @@
 
 #u3112
 {
-	width: 119px;
+	width: 139px;
 	padding-bottom: 17px;
 	position: relative;
 }
 
 #u3112:hover
 {
-	width: 119px;
+	width: 139px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3112:active
 {
-	width: 119px;
+	width: 139px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3114-4
 {
-	width: 119px;
+	width: 139px;
 	min-height: 17px;
 	position: relative;
 	margin-right: -10000px;
@@ -99,7 +99,7 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 119px;
+	width: 139px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -108,43 +108,50 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 119px;
+	width: 139px;
 	margin: 0px -10000px 0px 0px;
 }
 
 #u3118
 {
-	width: 119px;
+	width: 139px;
 	min-height: 34px;
 	position: relative;
 	margin-right: -10000px;
-	left: 121px;
+	left: 141px;
 }
 
 #u3119
 {
-	width: 119px;
+	width: 139px;
 	padding-bottom: 17px;
 	position: relative;
 }
 
 #u3112.MuseMenuActive,#u3119:hover
 {
-	width: 119px;
+	width: 139px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3119:active
 {
-	width: 119px;
+	width: 139px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u3119.MuseMenuActive
+{
+	width: 139px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3122-4
 {
-	width: 119px;
+	width: 139px;
 	min-height: 17px;
 	position: relative;
 	margin-right: -10000px;
@@ -156,7 +163,7 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 119px;
+	width: 139px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -165,55 +172,64 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 119px;
+	width: 139px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u3119.MuseMenuActive #u3122-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 139px;
 	margin: 0px -10000px 0px 0px;
 }
 
 #u4801
 {
-	width: 119px;
+	width: 140px;
 	min-height: 34px;
 	position: relative;
 	margin-right: -10000px;
-	left: 242px;
+	left: 282px;
 }
 
 #u4802
 {
-	width: 119px;
+	width: 140px;
 	padding-bottom: 17px;
 	position: relative;
 }
 
-#u3119.MuseMenuActive,#u4802:hover
+#u4802:hover
 {
-	width: 119px;
+	width: 140px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u4802:active
 {
-	width: 119px;
+	width: 140px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u4804-4
 {
-	width: 119px;
+	width: 140px;
 	min-height: 17px;
 	position: relative;
 	margin-right: -10000px;
 	top: 8px;
 }
 
-#u3119.MuseMenuActive #u3122-4,#u4802:hover #u4804-4
+#u4802:hover #u4804-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 119px;
+	width: 140px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -222,50 +238,43 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 119px;
+	width: 140px;
 	margin: 0px -10000px 0px 0px;
 }
 
 #u3155
 {
-	width: 119px;
+	width: 140px;
 	min-height: 34px;
 	position: relative;
 	margin-right: -10000px;
-	left: 363px;
+	left: 424px;
 }
 
 #u3156
 {
-	width: 119px;
+	width: 140px;
 	padding-bottom: 17px;
 	position: relative;
 }
 
 #u4802.MuseMenuActive,#u3156:hover
 {
-	width: 119px;
+	width: 140px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3156:active
 {
-	width: 119px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u3156.MuseMenuActive
-{
-	width: 119px;
+	width: 140px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3158-4
 {
-	width: 119px;
+	width: 140px;
 	min-height: 17px;
 	position: relative;
 	margin-right: -10000px;
@@ -277,7 +286,7 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 119px;
+	width: 140px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -286,121 +295,55 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 119px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u3156.MuseMenuActive #u3158-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 119px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u4991
-{
-	width: 120px;
-	min-height: 34px;
-	position: relative;
-	margin-right: -10000px;
-	left: 484px;
-}
-
-#u4992
-{
-	width: 120px;
-	padding-bottom: 17px;
-	position: relative;
-}
-
-#u4992:hover
-{
-	width: 120px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u4992:active
-{
-	width: 120px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u4995-4
-{
-	width: 120px;
-	min-height: 17px;
-	position: relative;
-	margin-right: -10000px;
-	top: 8px;
-}
-
-#u4992:hover #u4995-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 120px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u4992:active #u4995-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 120px;
+	width: 140px;
 	margin: 0px -10000px 0px 0px;
 }
 
 #u3176
 {
-	width: 120px;
+	width: 140px;
 	min-height: 34px;
 	position: relative;
 	margin-right: -10000px;
-	left: 606px;
+	left: 566px;
 }
 
 #u3177
 {
-	width: 120px;
+	width: 140px;
 	padding-bottom: 17px;
 	position: relative;
 }
 
-#u4992.MuseMenuActive,#u3177:hover
+#u3156.MuseMenuActive,#u3177:hover
 {
-	width: 120px;
+	width: 140px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3177:active
 {
-	width: 120px;
+	width: 140px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3178-4
 {
-	width: 120px;
+	width: 140px;
 	min-height: 17px;
 	position: relative;
 	margin-right: -10000px;
 	top: 8px;
 }
 
-#u4992.MuseMenuActive #u4995-4,#u3177:hover #u3178-4
+#u3156.MuseMenuActive #u3158-4,#u3177:hover #u3178-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 120px;
+	width: 140px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -409,50 +352,50 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 120px;
+	width: 140px;
 	margin: 0px -10000px 0px 0px;
 }
 
 #u3197
 {
-	width: 120px;
+	width: 140px;
 	min-height: 34px;
 	position: relative;
 	margin-right: -10000px;
-	left: 728px;
+	left: 708px;
 }
 
 #u3198
 {
-	width: 120px;
+	width: 140px;
 	padding-bottom: 17px;
 	position: relative;
 }
 
 #u3177.MuseMenuActive,#u3198:hover
 {
-	width: 120px;
+	width: 140px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3198:active
 {
-	width: 120px;
+	width: 140px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3198.MuseMenuActive
 {
-	width: 120px;
+	width: 140px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3200-4
 {
-	width: 120px;
+	width: 140px;
 	min-height: 17px;
 	position: relative;
 	margin-right: -10000px;
@@ -464,7 +407,7 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 120px;
+	width: 140px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -473,7 +416,7 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 120px;
+	width: 140px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -482,7 +425,7 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 120px;
+	width: 140px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -502,7 +445,7 @@
 
 #u1223-5
 {
-	z-index: 72;
+	z-index: 66;
 	width: 782px;
 	min-height: 56px;
 	background-color: transparent;
@@ -520,7 +463,7 @@
 
 #u1221
 {
-	z-index: 71;
+	z-index: 65;
 	width: 764px;
 	min-height: 503px;
 	border-width: 0px;
@@ -560,7 +503,7 @@
 
 #u4273-4
 {
-	z-index: 49;
+	z-index: 43;
 	margin-bottom: -8px;
 	position: relative;
 	margin-right: -10000px;
@@ -570,7 +513,7 @@
 
 #u3222-5
 {
-	z-index: 53;
+	z-index: 47;
 	width: 114px;
 	min-height: 19px;
 	position: relative;
@@ -590,7 +533,7 @@
 
 #u3252-6
 {
-	z-index: 64;
+	z-index: 58;
 	width: 782px;
 	min-height: 19px;
 	position: relative;
@@ -610,7 +553,7 @@
 
 #u4305
 {
-	z-index: 70;
+	z-index: 64;
 	width: 33px;
 	min-height: 33px;
 	position: relative;
