--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,7 +1,7 @@
 .version.portfolio /* version checker */
 {
-	color: #000018;
-	background-color: #B74AB5;
+	color: #0000E1;
+	background-color: #283A95;
 }
 
 #muse_css_mq
@@ -33,7 +33,7 @@
 
 #u3237-6
 {
-	z-index: 58;
+	z-index: 52;
 	width: 308px;
 	min-height: 83px;
 	margin-left: 270px;
@@ -50,7 +50,7 @@
 
 #u3111
 {
-	width: 119px;
+	width: 139px;
 	min-height: 34px;
 	position: relative;
 	margin-right: -10000px;
@@ -58,28 +58,28 @@
 
 #u3112
 {
-	width: 119px;
+	width: 139px;
 	padding-bottom: 17px;
 	position: relative;
 }
 
 #u3112:hover
 {
-	width: 119px;
+	width: 139px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3112:active
 {
-	width: 119px;
+	width: 139px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3114-4
 {
-	width: 119px;
+	width: 139px;
 	min-height: 17px;
 	position: relative;
 	margin-right: -10000px;
@@ -91,7 +91,7 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 119px;
+	width: 139px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -100,43 +100,50 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 119px;
+	width: 139px;
 	margin: 0px -10000px 0px 0px;
 }
 
 #u3118
 {
-	width: 119px;
+	width: 139px;
 	min-height: 34px;
 	position: relative;
 	margin-right: -10000px;
-	left: 121px;
+	left: 141px;
 }
 
 #u3119
 {
-	width: 119px;
+	width: 139px;
 	padding-bottom: 17px;
 	position: relative;
 }
 
 #u3112.MuseMenuActive,#u3119:hover
 {
-	width: 119px;
+	width: 139px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3119:active
 {
-	width: 119px;
+	width: 139px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u3119.MuseMenuActive
+{
+	width: 139px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3122-4
 {
-	width: 119px;
+	width: 139px;
 	min-height: 17px;
 	position: relative;
 	margin-right: -10000px;
@@ -148,7 +155,7 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 119px;
+	width: 139px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -157,55 +164,64 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 119px;
+	width: 139px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u3119.MuseMenuActive #u3122-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 139px;
 	margin: 0px -10000px 0px 0px;
 }
 
 #u4801
 {
-	width: 119px;
+	width: 140px;
 	min-height: 34px;
 	position: relative;
 	margin-right: -10000px;
-	left: 242px;
+	left: 282px;
 }
 
 #u4802
 {
-	width: 119px;
+	width: 140px;
 	padding-bottom: 17px;
 	position: relative;
 }
 
-#u3119.MuseMenuActive,#u4802:hover
+#u4802:hover
 {
-	width: 119px;
+	width: 140px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u4802:active
 {
-	width: 119px;
+	width: 140px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u4804-4
 {
-	width: 119px;
+	width: 140px;
 	min-height: 17px;
 	position: relative;
 	margin-right: -10000px;
 	top: 8px;
 }
 
-#u3119.MuseMenuActive #u3122-4,#u4802:hover #u4804-4
+#u4802:hover #u4804-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 119px;
+	width: 140px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -214,50 +230,43 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 119px;
+	width: 140px;
 	margin: 0px -10000px 0px 0px;
 }
 
 #u3155
 {
-	width: 119px;
+	width: 140px;
 	min-height: 34px;
 	position: relative;
 	margin-right: -10000px;
-	left: 363px;
+	left: 424px;
 }
 
 #u3156
 {
-	width: 119px;
+	width: 140px;
 	padding-bottom: 17px;
 	position: relative;
 }
 
 #u4802.MuseMenuActive,#u3156:hover
 {
-	width: 119px;
+	width: 140px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3156:active
 {
-	width: 119px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u3156.MuseMenuActive
-{
-	width: 119px;
+	width: 140px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3158-4
 {
-	width: 119px;
+	width: 140px;
 	min-height: 17px;
 	position: relative;
 	margin-right: -10000px;
@@ -269,7 +278,7 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 119px;
+	width: 140px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -278,121 +287,55 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 119px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u3156.MuseMenuActive #u3158-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 119px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u4991
-{
-	width: 120px;
-	min-height: 34px;
-	position: relative;
-	margin-right: -10000px;
-	left: 484px;
-}
-
-#u4992
-{
-	width: 120px;
-	padding-bottom: 17px;
-	position: relative;
-}
-
-#u4992:hover
-{
-	width: 120px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u4992:active
-{
-	width: 120px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u4995-4
-{
-	width: 120px;
-	min-height: 17px;
-	position: relative;
-	margin-right: -10000px;
-	top: 8px;
-}
-
-#u4992:hover #u4995-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 120px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u4992:active #u4995-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 120px;
+	width: 140px;
 	margin: 0px -10000px 0px 0px;
 }
 
 #u3176
 {
-	width: 120px;
+	width: 140px;
 	min-height: 34px;
 	position: relative;
 	margin-right: -10000px;
-	left: 606px;
+	left: 566px;
 }
 
 #u3177
 {
-	width: 120px;
+	width: 140px;
 	padding-bottom: 17px;
 	position: relative;
 }
 
-#u4992.MuseMenuActive,#u3177:hover
+#u3156.MuseMenuActive,#u3177:hover
 {
-	width: 120px;
+	width: 140px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3177:active
 {
-	width: 120px;
+	width: 140px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3178-4
 {
-	width: 120px;
+	width: 140px;
 	min-height: 17px;
 	position: relative;
 	margin-right: -10000px;
 	top: 8px;
 }
 
-#u4992.MuseMenuActive #u4995-4,#u3177:hover #u3178-4
+#u3156.MuseMenuActive #u3158-4,#u3177:hover #u3178-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 120px;
+	width: 140px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -401,50 +344,50 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 120px;
+	width: 140px;
 	margin: 0px -10000px 0px 0px;
 }
 
 #u3197
 {
-	width: 120px;
+	width: 140px;
 	min-height: 34px;
 	position: relative;
 	margin-right: -10000px;
-	left: 728px;
+	left: 708px;
 }
 
 #u3198
 {
-	width: 120px;
+	width: 140px;
 	padding-bottom: 17px;
 	position: relative;
 }
 
 #u3177.MuseMenuActive,#u3198:hover
 {
-	width: 120px;
+	width: 140px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3198:active
 {
-	width: 120px;
+	width: 140px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3198.MuseMenuActive
 {
-	width: 120px;
+	width: 140px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3200-4
 {
-	width: 120px;
+	width: 140px;
 	min-height: 17px;
 	position: relative;
 	margin-right: -10000px;
@@ -456,7 +399,7 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 120px;
+	width: 140px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -465,7 +408,7 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 120px;
+	width: 140px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -474,7 +417,7 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 120px;
+	width: 140px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -492,7 +435,7 @@
 
 #u1760-5
 {
-	z-index: 71;
+	z-index: 65;
 	width: 782px;
 	min-height: 26px;
 	background-color: transparent;
@@ -516,7 +459,7 @@
 
 #u4522
 {
-	z-index: 112;
+	z-index: 106;
 	width: 68px;
 	min-height: 51px;
 	border-width: 0px;
@@ -536,7 +479,7 @@
 
 #u3841-9
 {
-	z-index: 79;
+	z-index: 73;
 	width: 782px;
 	min-height: 70px;
 	background-color: transparent;
@@ -569,7 +512,7 @@
 
 #u4002
 {
-	z-index: 97;
+	z-index: 91;
 	width: 782px;
 	height: 19px;
 	border-style: solid;
@@ -588,7 +531,7 @@
 
 #u3750
 {
-	z-index: 78;
+	z-index: 72;
 	width: 244px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -616,7 +559,7 @@
 
 #u4546-4
 {
-	z-index: 113;
+	z-index: 107;
 	width: 239px;
 	min-height: 151px;
 	background-color: transparent;
@@ -648,7 +591,7 @@
 
 #u3749
 {
-	z-index: 77;
+	z-index: 71;
 	width: 244px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -675,7 +618,7 @@
 
 #u4549-4
 {
-	z-index: 117;
+	z-index: 111;
 	width: 245px;
 	min-height: 151px;
 	background-color: transparent;
@@ -692,7 +635,7 @@
 
 #u4349
 {
-	z-index: 111;
+	z-index: 105;
 	width: 244px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -719,7 +662,7 @@
 
 #u4552-4
 {
-	z-index: 121;
+	z-index: 115;
 	width: 245px;
 	min-height: 151px;
 	background-color: transparent;
@@ -744,7 +687,7 @@
 
 #u3748
 {
-	z-index: 76;
+	z-index: 70;
 	width: 244px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -769,7 +712,7 @@
 
 #u4555-4
 {
-	z-index: 125;
+	z-index: 119;
 	width: 245px;
 	min-height: 156px;
 	background-color: transparent;
@@ -806,7 +749,7 @@
 
 #u4273-4
 {
-	z-index: 49;
+	z-index: 43;
 	position: relative;
 	margin-right: -10000px;
 	margin-top: 15px;
@@ -815,7 +758,7 @@
 
 #u3222-5
 {
-	z-index: 53;
+	z-index: 47;
 	width: 114px;
 	min-height: 19px;
 	position: relative;
@@ -833,7 +776,7 @@
 
 #u3844-6
 {
-	z-index: 88;
+	z-index: 82;
 	width: 782px;
 	min-height: 75px;
 	background-color: transparent;
@@ -846,7 +789,7 @@
 
 #u3847
 {
-	z-index: 94;
+	z-index: 88;
 	width: 244px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -874,7 +817,7 @@
 
 #u4558-4
 {
-	z-index: 129;
+	z-index: 123;
 	width: 245px;
 	min-height: 156px;
 	background-color: transparent;
@@ -891,7 +834,7 @@
 
 #u3850
 {
-	z-index: 95;
+	z-index: 89;
 	width: 244px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -919,7 +862,7 @@
 
 #u4561-4
 {
-	z-index: 133;
+	z-index: 127;
 	width: 245px;
 	min-height: 156px;
 	background-color: transparent;
@@ -936,7 +879,7 @@
 
 #u3853
 {
-	z-index: 96;
+	z-index: 90;
 	width: 244px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -964,7 +907,7 @@
 
 #u4564-4
 {
-	z-index: 137;
+	z-index: 131;
 	width: 245px;
 	min-height: 156px;
 	background-color: transparent;
@@ -981,7 +924,7 @@
 
 #u4005
 {
-	z-index: 98;
+	z-index: 92;
 	width: 782px;
 	height: 19px;
 	border-style: solid;
@@ -995,7 +938,7 @@
 
 #u4608
 {
-	z-index: 145;
+	z-index: 139;
 	width: 244px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -1022,7 +965,7 @@
 
 #u4619-4
 {
-	z-index: 146;
+	z-index: 140;
 	width: 245px;
 	min-height: 155px;
 	background-color: transparent;
@@ -1055,7 +998,7 @@
 
 #u4874-6
 {
-	z-index: 150;
+	z-index: 144;
 	width: 782px;
 	min-height: 75px;
 	background-color: transparent;
@@ -1068,7 +1011,7 @@
 
 #u4878
 {
-	z-index: 156;
+	z-index: 150;
 	width: 782px;
 	height: 19px;
 	border-style: solid;
@@ -1082,7 +1025,7 @@
 
 #u4879
 {
-	z-index: 157;
+	z-index: 151;
 	width: 244px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -1122,7 +1065,7 @@
 
 #u4883-4
 {
-	z-index: 158;
+	z-index: 152;
 	width: 245px;
 	min-height: 156px;
 	background-color: transparent;
@@ -1155,7 +1098,7 @@
 
 #u4276-6
 {
-	z-index: 99;
+	z-index: 93;
 	width: 782px;
 	min-height: 300px;
 	background-color: transparent;
@@ -1191,7 +1134,7 @@
 
 #u4277
 {
-	z-index: 105;
+	z-index: 99;
 	width: 245px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -1230,7 +1173,7 @@
 
 #u4570-4
 {
-	z-index: 141;
+	z-index: 135;
 	width: 241px;
 	min-height: 158px;
 	background-color: transparent;
@@ -1270,7 +1213,7 @@
 
 #u4278-4
 {
-	z-index: 106;
+	z-index: 100;
 	width: 245px;
 	min-height: 23px;
 	background-color: #FFFFFF;
@@ -1288,7 +1231,7 @@
 
 #u4279
 {
-	z-index: 110;
+	z-index: 104;
 	width: 782px;
 	height: 19px;
 	border-style: solid;
@@ -1317,7 +1260,7 @@
 
 #u3252-6
 {
-	z-index: 64;
+	z-index: 58;
 	width: 782px;
 	min-height: 19px;
 	position: relative;
@@ -1337,7 +1280,7 @@
 
 #u4305
 {
-	z-index: 70;
+	z-index: 64;
 	width: 33px;
 	min-height: 33px;
 	position: relative;
